--- a/user-console/ollama/configs/v0_53.yaml
+++ b/user-console/ollama/configs/v0_53.yaml
@@ -11,7 +11,7 @@ image:
   registry: docker.io
   repository: ollama/ollama
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.3.6"
   pullPolicy: IfNotPresent
 
 ## @param ollama.gpu.enabled Enable GPU integration
@@ -19,11 +19,10 @@ image:
 ## @param ollama.gpu.number Number of GPUs
 ## @param ollama.models List of models to pull at container startup
 ## @param ollama.insecure Add insecure flag for pulling at container startup
-## @param ollama.mountPath Override ollama-data volume mount path, default: "/root/.ollama"
 ##
 ollama:
   gpu:
-    enabled: false
+    enabled: true
     # If 'ollama.gpu.enabled', default value is nvidia
     # If set to 'amd', this will add 'rocm' suffix to image tag if 'image.tag' is not override
     # This is due cause AMD and CPU/CUDA are different images
@@ -31,35 +30,25 @@ ollama:
     number: 1
 
   # The more you add, the longer the container will take to start if models are not present
-  # models:
+  models: []
   #  - llama3
   #  - mistral
-  models: []
 
   insecure: false
 
-  mountPath: ""
-
-## @param runtimeClassName Specify runtime class
-##
-runtimeClassName: ""
-
 ## @param service.type Service type
 ## @param service.port Service port
-## @param service.nodePort Service node port when service type is 'NodePort'
-## @param service.annotations Annotations to add to the service
 ##
 service:
   type: ClusterIP
   port: 11434
-  nodePort: 31434
-  annotations: {}
 
 ## @param ingress.enabled Enable ingress controller resource
 ## @param ingress.className IngressClass that will be used to implement the Ingress (Kubernetes 1.18+)
 ## @param ingress.annotations Additional annotations for the Ingress resource
 ## @param ingress.hosts List of hostnames to be covered with this ingress record
 ## @param ingress.tls The tls configuration for hostnames to be covered with this ingress record
+##
 ingress:
   enabled: false
   className: ""
@@ -82,60 +71,16 @@ ingress:
 ## @param resources.limits.cpu CPU limit for the Ollama server pod
 ## @param resources.limits.memory Memory limit for the Ollama server pod
 ##
-resources:
+resources:  # do NOT add `nvidia.com/gpu` manually
   requests:
-    cpu: 8
-    # cpu: 1  # if gpu is enabled
+    cpu: 1
+    # cpu: 8  # if gpu is disabled
     memory: 8Gi
 
   limits:
-    cpu: 16
-    # cpu: 1  # if gpu is enabled
+    cpu: 1
+    # cpu: 16  # if gpu is disabled
     memory: 16Gi
-
-## @param livenessProbe.enabled Enable livenessProbe
-## @param livenessProbe.path Request path for livenessProbe
-## @param livenessProbe.initialDelaySeconds Initial delay seconds for livenessProbe
-## @param livenessProbe.periodSeconds Period seconds for livenessProbe
-## @param livenessProbe.timeoutSeconds Timeout seconds for livenessProbe
-## @param livenessProbe.failureThreshold Failure threshold for livenessProbe
-## @param livenessProbe.successThreshold Success threshold for livenessProbe
-##
-livenessProbe:
-  enabled: true
-  path: /
-  initialDelaySeconds: 60
-  periodSeconds: 10
-  timeoutSeconds: 5
-  failureThreshold: 6
-  successThreshold: 1
-
-## @param readinessProbe.enabled Enable readinessProbe
-## @param readinessProbe.path Request path for readinessProbe
-## @param readinessProbe.initialDelaySeconds Initial delay seconds for readinessProbe
-## @param readinessProbe.periodSeconds Period seconds for readinessProbe
-## @param readinessProbe.timeoutSeconds Timeout seconds for readinessProbe
-## @param readinessProbe.failureThreshold Failure threshold for readinessProbe
-## @param readinessProbe.successThreshold Success threshold for readinessProbe
-##
-readinessProbe:
-  enabled: true
-  path: /
-  initialDelaySeconds: 30
-  periodSeconds: 5
-  timeoutSeconds: 3
-  failureThreshold: 6
-  successThreshold: 1
-
-## @param extraArgs Additional arguments on the output Deployment definition
-##
-extraArgs: []
-
-## @param extraEnv Additional environments variables on the output Deployment definition
-##
-extraEnv: []
-#  - name: OLLAMA_DEBUG
-#    value: "1"
 
 ## @param persistentVolume.enabled Enable persistence using Persistent Volume Claims
 ## @param persistentVolume.accessModes Ollama server data Persistent Volume access modes
@@ -145,8 +90,9 @@ extraEnv: []
 ## @param persistentVolume.storageClass Ollama server data Persistent Volume Storage Class
 ## @param persistentVolume.volumeMode Ollama server data Persistent Volume Binding Mode
 ## @param persistentVolume.subPath Subdirectory of Ollama server data Persistent Volume to mount
+##
 persistentVolume:
-  enabled: false
+  enabled: true
   accessModes:
     - ReadWriteOnce
   annotations: {}
@@ -158,17 +104,3 @@ persistentVolume:
   storageClass: ""
   volumeMode: ""
   subPath: ""
-
-## @param updateStrategy.type How to replace existing pods (`Recreate` or `RollingUpdate`)
-##
-updateStrategy:
-  type: ""
-
-## @param initContainers Init containers to add to the pod
-##
-initContainers: []
-# - name: startup-tool
-#   image: alpine:3
-#   command: [sh, -c]
-#   args:
-#     - echo init
