--- a/user-console/ollama/chart/templates/deployment.yaml
+++ b/user-console/ollama/chart/templates/deployment.yaml
@@ -78,7 +78,7 @@ spec:
           {{- end}}
           volumeMounts:
             - name: ollama-data
-              mountPath: /root/.ollama
+              mountPath: {{ .Values.ollama.mountPath | default "/root/.ollama" }}
           {{- with .Values.volumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
