--- a/user-console/open-webui/chart/Chart.yaml
+++ b/user-console/open-webui/chart/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v2
 name: open-webui
-version: 2.1.5
-appVersion: "latest"
+version: 3.1.6
+appVersion: 0.3.13
 
 home: https://www.openwebui.com/
 icon: https://raw.githubusercontent.com/open-webui/open-webui/main/static/favicon.png
 
-description: "Open WebUI: A User-Friendly Web Interface for Chat Interactions 👋"
+description: "Open WebUI 是一个用户友好的聊天交互网页界面。"
 keywords:
   - llm
   - chat
@@ -22,10 +22,17 @@ annotations:
   licenses: MIT
 
 dependencies:
-  - name: ollama
-    repository: https://otwld.github.io/ollama-helm/
-    version: ">=0.24.0"
-    import-values:
-      - child: service
-        parent: ollama.service
-    condition: ollama.enabled
+- condition: ollama.enabled
+  import-values:
+  - child: service
+    parent: ollama.service
+  name: ollama
+  repository: https://otwld.github.io/ollama-helm/
+  version: '>=0.24.0'
+- condition: pipelines.enabled
+  import-values:
+  - child: service
+    parent: pipelines.service
+  name: pipelines
+  repository: https://helm.openwebui.com
+  version: '>=0.0.1'
