--- a/user-console/terminal/chart/Chart.yaml
+++ b/user-console/terminal/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: terminal
-description: The Terminal APP is a powerful tool that allows you to open and operate a cluster terminal directly in your browser. You can easily access and manage your cluster through this APP.
+description: Terminal 是一个在浏览器中直接打开和操作的集群终端，便于管理集群。
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -14,8 +14,8 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 0.1.5
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 0.1.5
+appVersion: 0.2.0
