--- a/user-console/terminal/template.yaml
+++ b/user-console/terminal/template.yaml
@@ -3,9 +3,9 @@ kind: Template
 metadata:
   name: terminal
   displayName: Terminal
-  defaultVersion: "0.1.5"
+  defaultVersion: "0.2.0"
   categories: ["Tool"]
-  description: "The Terminal APP is a powerful tool that allows you to open and operate a cluster terminal directly in your browser. You can also easily access and manage your cluster through this APP."
+  description: "Terminal 是一个在浏览器中直接打开和操作的集群终端，便于管理集群。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm: 
@@ -13,26 +13,8 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "terminal"
     versions:
-    - version: 0.1.3
-      config: "file://$APP_DIR/configs/v0_1_3.yaml"
-      urls: 
-      - name: terminal
-        url: /apps/{{ .Release.Namespace }}/terminal/{{ .Release.Name }}/
-      readinessProbe:
-        resources:
-        - group: apps
-          version: v1
-          resource: deployments
-          name: "{{ .Release.Name }}"
-          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True"
-      dependencies:
-        crds:
-        - group: networking.istio.io
-          version: v1beta1
-          resource: virtualservices
-    - version: 0.1.4
-      config: "file://$APP_DIR/configs/v0_1_4.yaml"
+    - version: 0.2.0
+      config: "file://$APP_DIR/configs/v0_2_0.yaml"
       urls: 
       - name: terminal
         url: /apps/{{ .Release.Namespace }}/terminal/{{ .Release.Name }}/
