--- a/user-console/stable-diffusion-webui-aki/template.yaml
+++ b/user-console/stable-diffusion-webui-aki/template.yaml
@@ -13,6 +13,7 @@ template:
     chart: "stable-diffusion-webui-aki"
     versions:
     - version: 0.2.0
+      config: "file://$APP_DIR/configs/v0_2_0.yaml"
       urls: 
       - name: UI
         url: /apps/{{ .Release.Namespace }}/stable-diffusion-webui-aki/{{ .Release.Name }}/
