--- a/user-console/vllm/vllm-smls-llama3/template.yaml
+++ b/user-console/vllm/vllm-smls-llama3/template.yaml
@@ -13,6 +13,7 @@ template:
     chart: "vllm-llama3"
     versions:
     - version: 0.2.0
+      config: "file://$APP_DIR/configs/v0_2_0.yaml"
       urls: []
       readinessProbe:
         resources:
