--- a/user-console/job-manager/template.yaml
+++ b/user-console/job-manager/template.yaml
@@ -3,17 +3,17 @@ kind: Template
 metadata:
   name: job-manager
   displayName: Job Manager
-  defaultVersion: 0.1.3
+  defaultVersion: 0.2.0
   categories: ["Tool", "AI"]
-  description: "Job Manager 是一个用于管理计算任务的控制台，可执行创建任务、查看任务状态、监控任务事件等操作。"
+  description: "Job Manager 是一个用于管理 T9k Job 的控制台，通过直观的界面方便用户创建 Job、查看 Job 的详细信息以及监控计算资源的使用情况"
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm: 
     repo: "oci://docker.io/t9kpublic"
     chart: "job-manager"
     versions:
-    - version: 0.1.2
-      config: "file://$APP_DIR/configs/v0_1_2.yaml"
+    - version: 0.2.0
+      config: "file://$APP_DIR/configs/v0_2_0.yaml"
       urls: 
       - name: job-manager
         url: /apps/{{ .Release.Namespace }}/job-manager/{{ .Release.Name }}/web/
