Add message field to readinessProbe

--- a/user-console/notebook/jupyter-lab-gpu/template.yaml
+++ b/user-console/notebook/jupyter-lab-gpu/template.yaml
@@ -23,6 +23,7 @@ template:
           version: v1beta1
           resource: notebooks
           name: "{{ .Release.Name }}"
+          message: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .message }}{{- end }}{{- end }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies:
@@ -41,6 +42,7 @@ template:
           version: v1beta1
           resource: notebooks
           name: "{{ .Release.Name }}"
+          message: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .message }}{{- end }}{{- end }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies:
