--- a/user-console/notebook/jupyter-lab-gcu/template.yaml
+++ b/user-console/notebook/jupyter-lab-gcu/template.yaml
@@ -24,6 +24,7 @@ template:
           version: v1beta1
           resource: notebooks
           name: "{{ .Release.Name }}"
+          message: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .message }}{{- end }}{{- end }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies:
@@ -42,6 +43,7 @@ template:
           version: v1beta1
           resource: notebooks
           name: "{{ .Release.Name }}"
+          message: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .message }}{{- end }}{{- end }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies:
