--- a/user-console/job-manager/configs/v0_1_2.yaml
+++ b/user-console/job-manager/configs/v0_1_2.yaml
@@ -6,3 +6,21 @@ network:
 cluster:
   extendedResources:
     gpu: ["nvidia.com/gpu.shared", "nvidia.com/gpu"]
+
+authorization:
+  pepProxy:
+    image:
+      registry: $(T9K_APPS_IMAGE_REGISTRY)
+      repository: $(T9K_APPS_IMAGE_NAMESPACE)/pep-proxy
+      tag: "1.0.12"
+
+server:
+  image:
+    registry: $(T9K_APPS_IMAGE_REGISTRY)
+    repository: $(T9K_APPS_IMAGE_NAMESPACE)/job-manager-server
+    tag: "240805"
+web:
+  image:
+    registry: $(T9K_APPS_IMAGE_REGISTRY)
+    repository: $(T9K_APPS_IMAGE_NAMESPACE)/job-manager-web
+    tag: "240805"
