--- a/user-console/tensorboard/configs/v0_2_0.yaml
+++ b/user-console/tensorboard/configs/v0_2_0.yaml
@@ -4,8 +4,8 @@
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
 image:
-  registry: docker.io
-  repository: t9kpublic/tensorflow-2.11.0
+  registry: "$(T9K_APPS_IMAGE_REGISTRY)"
+  repository: "$(T9K_APPS_IMAGE_NAMESPACE)/tensorflow-2.11.0"
   tag: "cpu-sdk-0.5.2"
   pullPolicy: IfNotPresent
 
