--- a/user-console/terminal/chart/templates/deployment.yaml
+++ b/user-console/terminal/chart/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
           - --redirect-url={{ .Values.global.t9k.homeURL }}/apps/{{ .Release.Namespace }}/terminal/{{ .Release.Name }}/oauth2/callback
           - --oidc-issuer-url={{ .Values.global.t9k.securityService.endpoints.oidc }}
           - --pep-config=/t9kconfig/pep-config.yaml
-          image: {{ .Values.global.t9k.pepProxy.image }}
+          image: {{ .Values.global.t9k.pepProxy.image.registry }}/{{ .Values.global.t9k.pepProxy.image.repository }}:{{ .Values.global.t9k.pepProxy.image.tag }}
           imagePullPolicy: IfNotPresent
           name: pep-proxy
           ports:
