[File Browser] / [Code Server]: add 'resources' field

--- a/user-console/explorer/filebrowser/chart/templates/explorer.yaml
+++ b/user-console/explorer/filebrowser/chart/templates/explorer.yaml
@@ -6,3 +6,7 @@ spec:
   storageName: "{{ .Values.pvc }}"
   storageType: pvc
   type: FileBrowser
+  resources:
+    limits:
+      cpu: "{{ .Values.resources.cpu }}"
+      memory: "{{ .Values.resources.memory }}"
