--- a/user-console/job-manager/template.yaml
+++ b/user-console/job-manager/template.yaml
@@ -12,9 +12,9 @@ template:
     repo: "oci://docker.io/t9kpublic"
     chart: "job-manager"
     versions:
-    - version: 0.2.0
-      config: "file://$APP_DIR/configs/v0_2_0.yaml"
-      urls: 
+    - version: 0.2.1
+      config: "file://$APP_DIR/configs/v0_2_1.yaml"
+      urls:
       - name: job-manager
         url: /apps/{{ .Release.Namespace }}/job-manager/{{ .Release.Name }}/web/
       readinessProbe:
@@ -24,7 +24,7 @@ template:
           resource: deployments
           name: "{{ .Release.Name }}-server"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True" 
+          desiredStatus: "True"
         - group: apps
           version: v1
           resource: deployments
@@ -36,12 +36,39 @@ template:
         - group: networking.istio.io
           version: v1beta1
           resource: virtualservices
-        services: 
+        services:
+        - namespace: t9k-system
+          name: k8s-resource-server
+    - version: 0.2.0
+      config: "file://$APP_DIR/configs/v0_2_0.yaml"
+      urls:
+      - name: job-manager
+        url: /apps/{{ .Release.Namespace }}/job-manager/{{ .Release.Name }}/web/
+      readinessProbe:
+        resources:
+        - group: apps
+          version: v1
+          resource: deployments
+          name: "{{ .Release.Name }}-server"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+        - group: apps
+          version: v1
+          resource: deployments
+          name: "{{ .Release.Name }}-web"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+      dependencies:
+        crds:
+        - group: networking.istio.io
+          version: v1beta1
+          resource: virtualservices
+        services:
         - namespace: t9k-system
           name: k8s-resource-server
     - version: 0.1.3
       config: "file://$APP_DIR/configs/v0_1_3.yaml"
-      urls: 
+      urls:
       - name: job-manager
         url: /apps/{{ .Release.Namespace }}/job-manager/{{ .Release.Name }}/web/
       readinessProbe:
@@ -51,7 +78,7 @@ template:
           resource: deployments
           name: "{{ .Release.Name }}-server"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
-          desiredStatus: "True" 
+          desiredStatus: "True"
         - group: apps
           version: v1
           resource: deployments
@@ -63,6 +90,6 @@ template:
         - group: networking.istio.io
           version: v1beta1
           resource: virtualservices
-        services: 
+        services:
         - namespace: t9k-system
           name: k8s-resource-server
