--- a/user-console/notebook/jupyter-lab-gpu/chart/templates/notebook.yaml
+++ b/user-console/notebook/jupyter-lab-gpu/chart/templates/notebook.yaml
@@ -6,6 +6,9 @@ spec:
   type: jupyter
   template:
     spec:
+      {{- if .Values.nodeSelector }}
+      nodeSelector: {{ toJson .Values.nodeSelector }}
+      {{- end}}
       containers:
         - name: notebook
           image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
