Update notebook series app

--- a/user-console/notebook/jupyter-lab-cpu/chart/values.yaml
+++ b/user-console/notebook/jupyter-lab-cpu/chart/values.yaml
@@ -7,10 +7,13 @@ image:
 pvc: ""
 
 resources:
-  cpu: "16"
-  memory: 32Gi
+  limits:
+    cpu: 16
+    memory: 32Gi
 
 ssh:
-  authorizedKeys: []
   enabled: false
+  authorizedKeys: []
   serviceType: ClusterIP
+
+nodeSelector: []
