--- a/user-console/notebook/jupyter-lab-gcu/chart/templates/notebook.yaml
+++ b/user-console/notebook/jupyter-lab-gcu/chart/templates/notebook.yaml
@@ -17,10 +17,7 @@ spec:
             - name: workingdir
               mountPath: /t9k/mnt
           resources:
-            limits:
-              cpu: "{{ .Values.resources.cpu }}"
-              memory: "{{ .Values.resources.memory }}"
-              enflame.com/gcu: "{{ .Values.resources.gcu }}"
+            {{- toYaml .Values.resources | nindent 12 }}
       volumes:
         - name: workingdir
           persistentVolumeClaim:
