--- a/user-console/notebook/rstudio/configs/v0_2_0.yaml
+++ b/user-console/notebook/rstudio/configs/v0_2_0.yaml
@@ -4,25 +4,23 @@
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
 image:
-  registry: registry.cn-hangzhou.aliyuncs.com
-  repository: t9k/jupyterlab-torch-2.1.0
-  tag: "240708-dcu"
+  registry: docker.io
+  repository: t9kpublic/rocker-4.2.3-rstudio
+  tag: "1.72.1"
   pullPolicy: IfNotPresent
 
-## @param pvc Mount a PVC as JupyterLab working directory
+## @param pvc Mount a pvc as RStudio working directory
 pvc: ""
 
-## @param resources.limits.cpu CPU limit for the App container
-## @param resources.limits.memory Memory limit for the App container
-## @param resources.limits."hygon.com/dcu" Hygon DCU limit for the App container
+## @param resources.cpu The maximum number of CPU the RStudio can use
+## @param resources.memory The maximum number of CPU the RStudio can use
 resources:
   limits:
     cpu: 16
     memory: 32Gi
-    hygon.com/dcu: 1
 
-## @param ssh.enabled Set true to start a SSH Service for JupyterLab.
-## @param ssh.authorizedKeys A list of names of v1.Secret containing SSH public keys authorized for access to this SSH service.
+## @param ssh.enabled Set true to start a SSH Service for RStudio
+## @param ssh.authorizedKeys A list of names of v1.Secret containing SSH public keys authorized for access to this SSH service
 ## @param ssh.serviceType Type for the SSH service (`ClusterIP` or `NodePort`)
 #
 # ssh:
