--- a/user-console/job-manager/configs/v0_2_1.yaml
+++ b/user-console/job-manager/configs/v0_2_1.yaml
@@ -10,17 +10,17 @@ cluster:
 authorization:
   pepProxy:
     image:
-      registry: "$(T9K_APPS_IMAGE_REGISTRY)"
-      repository: "$(T9K_APPS_IMAGE_NAMESPACE)/pep-proxy"
+      registry: "$(T9K_APP_IMAGE_REGISTRY)"
+      repository: "$(T9K_APP_IMAGE_NAMESPACE)/pep-proxy"
       tag: "1.0.12"
 
 server:
   image:
-    registry: "$(T9K_APPS_IMAGE_REGISTRY)"
-    repository: "$(T9K_APPS_IMAGE_NAMESPACE)/job-manager-server"
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/job-manager-server"
     tag: "240805"
 web:
   image:
-    registry: "$(T9K_APPS_IMAGE_REGISTRY)"
-    repository: "$(T9K_APPS_IMAGE_NAMESPACE)/job-manager-web"
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/job-manager-web"
     tag: "240805"
