--- a/user-console/workflow/configs/v0_1_2.yaml
+++ b/user-console/workflow/configs/v0_1_2.yaml
@@ -3,10 +3,6 @@ network:
     home: "$(T9K_HOME_DOMAIN)"
     auth: "$(T9K_AUTH_DOMAIN)"
 
-cluster:
-  extendedResources:
-    gpu: ["nvidia.com/gpu.shared", "nvidia.com/gpu"]
-
 authorization:
   pepProxy:
     image:
@@ -14,7 +10,8 @@ authorization:
       repository: "$(T9K_APP_IMAGE_NAMESPACE)/pep-proxy"
       tag: "1.0.12"
 
-image:
-  registry: "$(T9K_APP_IMAGE_REGISTRY)"
-  repository: "$(T9K_APP_IMAGE_NAMESPACE)/autotune-app"
-  tag: "240822"
+app:
+  image:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/workflow-app"
+    tag: "240830"
