--- a/user-console/autotune/configs/v0_1_2.yaml
+++ b/user-console/autotune/configs/v0_1_2.yaml
@@ -14,13 +14,7 @@ authorization:
       repository: "$(T9K_APP_IMAGE_NAMESPACE)/pep-proxy"
       tag: "1.0.12"
 
-server:
-  image:
-    registry: "$(T9K_APP_IMAGE_REGISTRY)"
-    repository: "$(T9K_APP_IMAGE_NAMESPACE)/job-manager-server"
-    tag: "240805"
-web:
-  image:
-    registry: "$(T9K_APP_IMAGE_REGISTRY)"
-    repository: "$(T9K_APP_IMAGE_NAMESPACE)/job-manager-web"
-    tag: "240805"
+image:
+  registry: "$(T9K_APP_IMAGE_REGISTRY)"
+  repository: "$(T9K_APP_IMAGE_NAMESPACE)/autotune-app"
+  tag: "240822"
