--- a/user-console/explorer/codeserver/chart/templates/explorer.yaml
+++ b/user-console/explorer/codeserver/chart/templates/explorer.yaml
@@ -7,6 +7,4 @@ spec:
   storageType: pvc
   type: CodeServer
   resources:
-    limits:
-      cpu: "{{ .Values.resources.cpu }}"
-      memory: "{{ .Values.resources.memory }}"
+    {{- toYaml .Values.resources | nindent 4 }}
