Support custom registry

--- a/user-console/argo-workflows/app/chart/templates/argo-server.deploy.yaml
+++ b/user-console/argo-workflows/app/chart/templates/argo-server.deploy.yaml
@@ -21,7 +21,7 @@ spec:
         - --configmap={{ .Release.Name }}
         - --basehref=/apps/{{ .Release.Namespace }}/argo-workflows/{{ .Release.Name }}/
         env: []
-        image: {{ .Values.server.image }}
+        image: {{ .Values.server.image.registry }}/{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}
         name: argo-server
         ports:
         - containerPort: 2746
