--- a/user-console/service-manager/configs/v0_2_0.yaml
+++ b/user-console/service-manager/configs/v0_2_0.yaml
@@ -2,3 +2,15 @@ network:
   domain:
     home: "$(T9K_HOME_DOMAIN)"
     auth: "$(T9K_AUTH_DOMAIN)"
+
+authorization:
+  pepProxy:
+    image:
+      registry: "$(T9K_APP_IMAGE_REGISTRY)"
+      repository: "$(T9K_APP_IMAGE_NAMESPACE)/pep-proxy"
+      tag: "1.0.12"
+web:
+  image:
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/service-manager-web"
+    tag: "240815"
