--- a/user-console/vllm/vllm-smls/chart/templates/simplemlservice.yaml
+++ b/user-console/vllm/vllm-smls/chart/templates/simplemlservice.yaml
@@ -26,7 +26,8 @@ spec:
       {{- if .Values.model.source }}
       initContainers:
         - name: wait-for-datacube
-          image: bitnami/kubectl:1.27
+          image: "{{ .Values.kubectl.image.registry }}/{{ .Values.kubectl.image.repository }}:{{ .Values.kubectl.image.tag }}"
+          imagePullPolicy: {{ .Values.imagePullPolicy }}
           command: ["/bin/sh", "-c"]
           args: ["kubectl wait --for=condition=Complete datacube/{{ .Release.Name }} --timeout=-1s"]
       serviceAccount: managed-project-sa
@@ -34,8 +35,8 @@ spec:
       {{- end }}
       containers:
       - name: server
-        image: "{{ .Values.image.registry }}/{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        image: "{{ .Values.server.image.registry }}/{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}"
+        imagePullPolicy: {{ .Values.imagePullPolicy }}
         args:
           - --model=/var/lib/t9k/model
           - --served-model-name={{ .Values.model.deployName }}
