--- a/user-console/vllm/vllm-smls/chart/templates/tests/test-connection.yaml
+++ b/user-console/vllm/vllm-smls/chart/templates/tests/test-connection.yaml
@@ -9,7 +9,8 @@ metadata:
 spec:
   containers:
     - name: wget
-      image: busybox
+      image: "{{ .Values.busybox.image.registry }}/{{ .Values.busybox.image.repository }}:{{ .Values.busybox.image.tag }}"
+      imagePullPolicy: {{ .Values.imagePullPolicy }}
       command: ['wget']
       args: ['{{ include "vllm.fullname" . }}:8000']
   restartPolicy: Never
