--- a/user-console/notebook/jupyter-lab-gcu/template.yaml
+++ b/user-console/notebook/jupyter-lab-gcu/template.yaml
@@ -6,7 +6,7 @@ metadata:
   categories: 
   - IDE
   description: "JupyterLab (Enflame GCU) 是一个基于 Web 的开发环境，适用于 Enflame GCU 的计算任务。"
-  icon: "file://$APP_DIR/icon.svg"
+  icon: "file://$APP_DIR/icon-gcu.svg"
 template:
   helm: 
     repo: "oci://docker.io/t9kpublic"
