--- a/user-console/tensorboard/configs/v0_2_0.yaml
+++ b/user-console/tensorboard/configs/v0_2_0.yaml
@@ -9,7 +9,7 @@ image:
   tag: "2.17.0"
   pullPolicy: IfNotPresent
 
-## @param pvc Mount a pvc as notebook working directory.
+## @param logDir Read tensorboard logs from pvc or s3 storage.
 # logDir:
 #   pvc:
 #     - name: tutorial
