--- a/user-console/vllm/vllm-smls/chart/templates/simplemlservice.yaml
+++ b/user-console/vllm/vllm-smls/chart/templates/simplemlservice.yaml
@@ -39,9 +39,10 @@ spec:
         args:
           - --model=/var/lib/t9k/model
           - --served-model-name={{ .Values.model.deployName }}
-          - --trust-remote-code
           - --tensor-parallel-size={{ (index .Values.resources.limits "nvidia.com/gpu") }}
-          - --enforce-eager
+          {{ range .Values.app.extraArgs }}
+          - {{ . }}
+          {{ end }}
         ports:
         - name: http
           containerPort: 8000
@@ -50,12 +51,16 @@ spec:
           httpGet:
             path: /health
             port: http
-          initialDelaySeconds: 60
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          failureThreshold: 5
         readinessProbe:
           httpGet:
             path: /health
             port: http
-          initialDelaySeconds: 60
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          failureThreshold: 5
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         volumeMounts:
