--- a/user-console/argo-workflows/app/configs/v0_1_1.yaml
+++ b/user-console/argo-workflows/app/configs/v0_1_1.yaml
@@ -1,6 +1,6 @@
 server:
   serviceAccount: managed-project-sa
   image:
-    registry: "docker.io"
-    repository: "t9kpublic/argocli"
+    registry: "$(T9K_APP_IMAGE_REGISTRY)"
+    repository: "$(T9K_APP_IMAGE_NAMESPACE)/argocli"
     tag: "v3.5.10"
