--- a/user-console/search-with-lepton/configs/v0_2_0.yaml
+++ b/user-console/search-with-lepton/configs/v0_2_0.yaml
@@ -6,6 +6,16 @@ resources:
     cpu: 1
     memory: 2Gi
 
+## @param image.registry Docker registry for the image
+## @param image.repository Repository name for the image
+## @param image.tag Tag for the image version
+##
+image:
+  registry: "$(T9K_APP_IMAGE_REGISTRY)"
+  repository: "$(T9K_APP_IMAGE_NAMESPACE)/search-with-lepton"
+  tag: "20240730"
+
+
 ## @param llm.baseUrl URL of the server compatible with the OpenAI API
 ## @param llm.apiKey API key for accessing the OpenAI API
 ## @param llm.modelName Name of the model to be used, e.g., "gpt-3.5-turbo", "gpt-4-turbo", or "gpt-4o"
